--- a/_posts/2019-10-24-welcome.md
+++ b/_posts/2019-10-24-welcome.md
@@ -9,6 +9,8 @@ tags: [Getting started]
 class: post-template
 subclass: 'post tag-getting-started'
 author: windrunner
+form: https://docs.google.com/forms/d/e/1FAIpQLSeFpMY-8UPPudqqiQ8W_m5mBan9anZljWrENowLkkE-XRJhNQ/viewform?embedded=true
+
 ---
 
 > 嗨，终于和你们见面，伟大的旅行者们。
@@ -25,10 +27,12 @@ author: windrunner
 ## 我提供的功能
 ---------
 - 支持Markdown发文和公布。
+- 支持在线表单活动报名。
 - 支持多媒体图片浏览和视频播放。
 - 提供文件存储，方便活动交流。
-- 支持文章评论互动，提升用户体验。
+- 支持文章评论互动，提升用户体验（自定义表情功能待上线）。
 - 提供站点管家和站内导航功能（待上线）。
+- 支持邮件RSS内容订阅，保证不错过任何活动信息。
 
 ## 鸣谢
 ---------
@@ -46,5 +50,7 @@ author: windrunner
 ---------
 - [yourzeromax@163.com](https://yourzeromax.top)  
 - [刘芳颖](522170051@qq.com)
+
+> 欢迎加入我的Github协作者联盟，请邮联 yourzeromax@163.com。
 
 总之，希望你能够享受和我在一起的时光，记录身边的美好。
