--- a/_posts/2019-11-05-坡峰岭赏红叶.md
+++ b/_posts/2019-11-05-坡峰岭赏红叶.md
@@ -9,7 +9,6 @@ tags: activities
 class: post-template
 subclass: 'post tag-fiction'
 author: windrunner
-form: https://docs.google.com/forms/d/e/1FAIpQLSf6R7m3y8z1wcckGfQe0c0o4I8WjoqTtJWVqop8ZtpuCm28Cw/viewform?embedded=true
 ---
 
 > 停车坐爱枫林晚，霜叶红于二月花。
@@ -75,3 +74,5 @@ form: https://docs.google.com/forms/d/e/1FAIpQLSf6R7m3y8z1wcckGfQe0c0o4I8WjoqTtJ
 ---------------
 > 报名截止日期：2019年11月8日 晚24:00时 整。
 欢迎大家填写文末报名表，填写完毕即视为报名成功，我们会在出行前发出确认邮件~
+
+<iframe height="800" width="100%" src="https://wj.qq.com/s2/4948904/5e1f/" frameborder="0" allowfullscreen></iframe>
